fixed UnderContruction placeholder page to wrap text

--- a/home/static/home/css/under_construction.css
+++ b/home/static/home/css/under_construction.css
@@ -29,7 +29,6 @@ h1 {
     text-transform: uppercase;
     margin: 0;
     font-size: 5rem;
-    white-space: nowrap;
     font-family: "Nova Flat", serif;
 
 }
